--- a/portfolio/app/index.html
+++ b/portfolio/app/index.html
@@ -360,7 +360,7 @@
           </div>
           
           <div class="footer-vk">
-            <a href="#"><img src="img/vk.png" alt=""/></a>
+            <a href="https://defenderkent.github.io/"><img src="img/vk.png" alt=""/></a>
           </div>
           <div class="footer-inst">
             <a href="#"><img src="img/inst.png" alt=""/></a>
