--- a/portfolio/app/index.html
+++ b/portfolio/app/index.html
@@ -29,7 +29,7 @@
               Привет, меня зовут Иннокентий Кондратьев и я <br />
 
               <span>Верстаю сайты и лэндинги</span><br />
-              создание современных и адаптивных веб-приложени
+              создание современных и адаптивных веб-приложений
               <div class="wrapper">
                 <div class="inner">
                   <a href="#about" class="hover-shadow hover-color"
