--- a/portfolio/app/index.html
+++ b/portfolio/app/index.html
@@ -249,7 +249,7 @@
   <li>Окончил Томский политехнический университет</li>
   <li>Опыт в верстке около года</li>
   <li>Знаком с C#</li>
-  <li>Изучаю все что связано с frontend-ом</li>
+  <li>Изучаю все, что связано с frontend-ом</li>
 </ul>
 </div>
 </div>  
