--- a/portfolio/app/index.html
+++ b/portfolio/app/index.html
@@ -163,7 +163,7 @@
                   Сайт для студии дизайна интерьера. Использовались:HTML, SCSS, JS, Gulp, Анимация.
                 </div>
                 <div class="works-slider__img">
-                  <a href=""><img src="img/loft.png" alt="" /></a>
+                  <a href="https://defenderkent.github.io/loft/"><img src="img/loft.png" alt="" /></a>
                 </div>
               </div>
             </div>
