--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               Привет, меня зовут Иннокентий Кондратьев и я <br />
 
               <span>Верстаю сайты и лэндинги</span><br />
-              создание современных и адаптивных веб-приложени
+              создание современных и адаптивных веб-приложений
               <div class="wrapper">
                 <div class="inner">
                   <a href="#about" class="hover-shadow hover-color"
@@ -249,7 +249,7 @@
   <li>Окончил Томский политехнический университет</li>
   <li>Опыт в верстке около года</li>
   <li>Знаком с C#</li>
-  <li>Изучаю все, что связано с frontend-ом</li>
+  <li>Изучаю все что связано с frontend-ом</li>
 </ul>
 </div>
 </div>  
