--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                   Gulp, Анимация.
                 </div>
                 <div class="works-slider__img">
-                  <a href="#"><img src="img/sheregesh.png" alt=""/></a>
+                  <a href="https://defenderkent.github.io/sheregesh/"><img src="img/sheregesh.png" alt=""/></a>
                 </div>
               </div>
             </div>
@@ -203,7 +203,7 @@
                   JS, Gulp, Анимация.
                 </div>
                 <div class="works-slider__img">
-                  <a href=""><img src="img/loft.png" alt=""/></a>
+                  <a href="https://defenderkent.github.io/loft/"><img src="img/loft.png" alt=""/></a>
                 </div>
               </div>
             </div>
@@ -215,7 +215,7 @@
                   Gulp, Анимация.
                 </div>
                 <div class="works-slider__img">
-                  <a href=""><img src="img/Hero.png" width="400" alt=""/></a>
+                  <a href="https://defenderkent.github.io/beach/"><img src="img/Hero.png" width="400" alt=""/></a>
                 </div>
               </div>
             </div>
@@ -227,7 +227,7 @@
                   SCSS, JS, Gulp, Анимация.
                 </div>
                 <div class="works-slider__img">
-                  <a href=""><img src="img/joomHost.png" alt=""/></a>
+                  <a href="https://defenderkent.github.io/host/"><img src="img/joomHost.png" alt=""/></a>
                 </div>
               </div>
             </div>
@@ -239,7 +239,7 @@
                   Использовались:HTML, CSS, JS
                 </div>
                 <div class="works-slider__img">
-                  <a href=""><img src="img/barbershop-index.jpg" alt=""/></a>
+                  <a href="https://defenderkent.github.io/barber/"><img src="img/barbershop-index.jpg" alt=""/></a>
                 </div>
               </div>
             </div>
@@ -251,7 +251,7 @@
                   Анимация.
                 </div>
                 <div class="works-slider__img">
-                  <a href=""> <img src="img/market.png" alt=""/></a>
+                  <a href="https://defenderkent.github.io/landing/"> <img src="img/market.png" alt=""/></a>
                 </div>
               </div>
             </div>
