--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 </div>
                 <div class="column__title">ИНСТРУМЕНТЫ</div>
                 <div class="column__text">
-                  Рботаю в VS Code, Figma, photoshop так же знаком с IDE Visual
+                  Работаю в VS Code, Figma, photoshop так же знаком с IDE Visual
                   Studio.
                 </div>
               </div>
