--- a/telmarket/index.html
+++ b/telmarket/index.html
@@ -311,6 +311,493 @@
         </div>
       </div>
     </section>
+    <section class="catalog">
+      <div class="container">
+        <div class="title">
+          <div class="title__name">Новинки</div>
+          <div class="title__line"></div>
+          <div class="title__allname">Все новинки</div>
+        </div>
+        <div class="catalog-slider">
+          <div class="catalog-slider-wrap">
+            <div class="catalog-slider-item">
+              <div class="catalog-slider-new">
+                new
+              </div>
+              <div class="catalog-slider-item__img">
+                <img src="img/router.png" alt="" />
+              </div>
+              <div class="catalog-slider-item__name">
+                IP телефон Siemens Gigaset C530A IP
+              </div>
+              <div class="catalog-slider-item__price">
+                Цена: <strong>12 300 р.</strong> <span>15 500 р.</span>
+              </div>
+              <div class="catalog-slider-item__btns">
+                <div class="catalog-slider-item__basket">
+                  <a href="#">
+                    <span><img src="img/cardwi.png" alt=""/></span> купить</a
+                  >
+                </div>
+                <div class="catalog-slider-item__next">
+                  <a href="#">Подробнее</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="catalog-slider-wrap">
+            <div class="catalog-slider-item">
+              <div class="catalog-slider-new">
+                new
+              </div>
+              <div class="catalog-slider-item__img">
+                <img src="img/router.png" alt="" />
+              </div>
+              <div class="catalog-slider-item__name">
+                IP телефон Siemens Gigaset C530A IP
+              </div>
+              <div class="catalog-slider-item__price">
+                Цена: <strong>12 300 р.</strong> <span>15 500 р.</span>
+              </div>
+              <div class="catalog-slider-item__btns">
+                <div class="catalog-slider-item__basket">
+                  <a href="#">
+                    <span><img src="img/cardwi.png" alt=""/></span> купить</a
+                  >
+                </div>
+                <div class="catalog-slider-item__next">
+                  <a href="#">Подробнее</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="catalog-slider-wrap">
+            <div class="catalog-slider-item">
+              <div class="catalog-slider-new">
+                new
+              </div>
+              <div class="catalog-slider-item__img">
+                <img src="img/router.png" alt="" />
+              </div>
+              <div class="catalog-slider-item__name">
+                IP телефон Siemens Gigaset C530A IP
+              </div>
+              <div class="catalog-slider-item__price">
+                Цена: <strong>12 300 р.</strong> <span>15 500 р.</span>
+              </div>
+              <div class="catalog-slider-item__btns">
+                <div class="catalog-slider-item__basket">
+                  <a href="#">
+                    <span><img src="img/cardwi.png" alt=""/></span> купить</a
+                  >
+                </div>
+                <div class="catalog-slider-item__next">
+                  <a href="#">Подробнее</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="catalog-slider-wrap">
+            <div class="catalog-slider-item">
+              <div class="catalog-slider-new">
+                new
+              </div>
+              <div class="catalog-slider-item__img">
+                <img src="img/router.png" alt="" />
+              </div>
+              <div class="catalog-slider-item__name">
+                IP телефон Siemens Gigaset C530A IP
+              </div>
+              <div class="catalog-slider-item__price">
+                Цена: <strong>12 300 р.</strong> <span>15 500 р.</span>
+              </div>
+              <div class="catalog-slider-item__btns">
+                <div class="catalog-slider-item__basket">
+                  <a href="#">
+                    <span><img src="img/cardwi.png" alt=""/></span> купить</a
+                  >
+                </div>
+                <div class="catalog-slider-item__next">
+                  <a href="#">Подробнее</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="catalog-slider-wrap">
+            <div class="catalog-slider-item">
+              <div class="catalog-slider-new">
+                new
+              </div>
+              <div class="catalog-slider-item__img">
+                <img src="img/router.png" alt="" />
+              </div>
+              <div class="catalog-slider-item__name">
+                IP телефон Siemens Gigaset C530A IP
+              </div>
+              <div class="catalog-slider-item__price">
+                Цена: <strong>12 300 р.</strong> <span>15 500 р.</span>
+              </div>
+              <div class="catalog-slider-item__btns">
+                <div class="catalog-slider-item__basket">
+                  <a href="#">
+                    <span><img src="img/cardwi.png" alt=""/></span> купить</a
+                  >
+                </div>
+                <div class="catalog-slider-item__next">
+                  <a href="#">Подробнее</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="catalog">
+      <div class="container">
+        <div class="title">
+          <div class="title__name">Новинки</div>
+          <div class="title__line"></div>
+          <div class="title__allname">Все новинки</div>
+        </div>
+        <div class="catalog-slider">
+          <div class="catalog-slider-wrap">
+            <div class="catalog-slider-item">
+              <div class="catalog-slider-new">
+                new
+              </div>
+              <div class="catalog-slider-item__img">
+                <img src="img/router.png" alt="" />
+              </div>
+              <div class="catalog-slider-item__name">
+                IP телефон Siemens Gigaset C530A IP
+              </div>
+              <div class="catalog-slider-item__price">
+                Цена: <strong>12 300 р.</strong> <span>15 500 р.</span>
+              </div>
+              <div class="catalog-slider-item__btns">
+                <div class="catalog-slider-item__basket">
+                  <a href="#">
+                    <span><img src="img/cardwi.png" alt=""/></span> купить</a
+                  >
+                </div>
+                <div class="catalog-slider-item__next">
+                  <a href="#">Подробнее</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="catalog-slider-wrap">
+            <div class="catalog-slider-item">
+              <div class="catalog-slider-new">
+                new
+              </div>
+              <div class="catalog-slider-item__img">
+                <img src="img/router.png" alt="" />
+              </div>
+              <div class="catalog-slider-item__name">
+                IP телефон Siemens Gigaset C530A IP
+              </div>
+              <div class="catalog-slider-item__price">
+                Цена: <strong>12 300 р.</strong> <span>15 500 р.</span>
+              </div>
+              <div class="catalog-slider-item__btns">
+                <div class="catalog-slider-item__basket">
+                  <a href="#">
+                    <span><img src="img/cardwi.png" alt=""/></span> купить</a
+                  >
+                </div>
+                <div class="catalog-slider-item__next">
+                  <a href="#">Подробнее</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="catalog-slider-wrap">
+            <div class="catalog-slider-item">
+              <div class="catalog-slider-new">
+                new
+              </div>
+              <div class="catalog-slider-item__img">
+                <img src="img/router.png" alt="" />
+              </div>
+              <div class="catalog-slider-item__name">
+                IP телефон Siemens Gigaset C530A IP
+              </div>
+              <div class="catalog-slider-item__price">
+                Цена: <strong>12 300 р.</strong> <span>15 500 р.</span>
+              </div>
+              <div class="catalog-slider-item__btns">
+                <div class="catalog-slider-item__basket">
+                  <a href="#">
+                    <span><img src="img/cardwi.png" alt=""/></span> купить</a
+                  >
+                </div>
+                <div class="catalog-slider-item__next">
+                  <a href="#">Подробнее</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="catalog-slider-wrap">
+            <div class="catalog-slider-item">
+              <div class="catalog-slider-new">
+                new
+              </div>
+              <div class="catalog-slider-item__img">
+                <img src="img/router.png" alt="" />
+              </div>
+              <div class="catalog-slider-item__name">
+                IP телефон Siemens Gigaset C530A IP
+              </div>
+              <div class="catalog-slider-item__price">
+                Цена: <strong>12 300 р.</strong> <span>15 500 р.</span>
+              </div>
+              <div class="catalog-slider-item__btns">
+                <div class="catalog-slider-item__basket">
+                  <a href="#">
+                    <span><img src="img/cardwi.png" alt=""/></span> купить</a
+                  >
+                </div>
+                <div class="catalog-slider-item__next">
+                  <a href="#">Подробнее</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="catalog-slider-wrap">
+            <div class="catalog-slider-item">
+              <div class="catalog-slider-new">
+                new
+              </div>
+              <div class="catalog-slider-item__img">
+                <img src="img/router.png" alt="" />
+              </div>
+              <div class="catalog-slider-item__name">
+                IP телефон Siemens Gigaset C530A IP
+              </div>
+              <div class="catalog-slider-item__price">
+                Цена: <strong>12 300 р.</strong> <span>15 500 р.</span>
+              </div>
+              <div class="catalog-slider-item__btns">
+                <div class="catalog-slider-item__basket">
+                  <a href="#">
+                    <span><img src="img/cardwi.png" alt=""/></span> купить</a
+                  >
+                </div>
+                <div class="catalog-slider-item__next">
+                  <a href="#">Подробнее</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="catalog">
+      <div class="container">
+        <div class="title">
+          <div class="title__name">Новинки</div>
+          <div class="title__line"></div>
+          <div class="title__allname">Все новинки</div>
+        </div>
+        <div class="catalog-slider">
+          <div class="catalog-slider-wrap">
+            <div class="catalog-slider-item">
+              <div class="catalog-slider-new">
+                new
+              </div>
+              <div class="catalog-slider-item__img">
+                <img src="img/router.png" alt="" />
+              </div>
+              <div class="catalog-slider-item__name">
+                IP телефон Siemens Gigaset C530A IP
+              </div>
+              <div class="catalog-slider-item__price">
+                Цена: <strong>12 300 р.</strong> <span>15 500 р.</span>
+              </div>
+              <div class="catalog-slider-item__btns">
+                <div class="catalog-slider-item__basket">
+                  <a href="#">
+                    <span><img src="img/cardwi.png" alt=""/></span> купить</a
+                  >
+                </div>
+                <div class="catalog-slider-item__next">
+                  <a href="#">Подробнее</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="catalog-slider-wrap">
+            <div class="catalog-slider-item">
+              <div class="catalog-slider-new">
+                new
+              </div>
+              <div class="catalog-slider-item__img">
+                <img src="img/router.png" alt="" />
+              </div>
+              <div class="catalog-slider-item__name">
+                IP телефон Siemens Gigaset C530A IP
+              </div>
+              <div class="catalog-slider-item__price">
+                Цена: <strong>12 300 р.</strong> <span>15 500 р.</span>
+              </div>
+              <div class="catalog-slider-item__btns">
+                <div class="catalog-slider-item__basket">
+                  <a href="#">
+                    <span><img src="img/cardwi.png" alt=""/></span> купить</a
+                  >
+                </div>
+                <div class="catalog-slider-item__next">
+                  <a href="#">Подробнее</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="catalog-slider-wrap">
+            <div class="catalog-slider-item">
+              <div class="catalog-slider-new">
+                new
+              </div>
+              <div class="catalog-slider-item__img">
+                <img src="img/router.png" alt="" />
+              </div>
+              <div class="catalog-slider-item__name">
+                IP телефон Siemens Gigaset C530A IP
+              </div>
+              <div class="catalog-slider-item__price">
+                Цена: <strong>12 300 р.</strong> <span>15 500 р.</span>
+              </div>
+              <div class="catalog-slider-item__btns">
+                <div class="catalog-slider-item__basket">
+                  <a href="#">
+                    <span><img src="img/cardwi.png" alt=""/></span> купить</a
+                  >
+                </div>
+                <div class="catalog-slider-item__next">
+                  <a href="#">Подробнее</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="catalog-slider-wrap">
+            <div class="catalog-slider-item">
+              <div class="catalog-slider-new">
+                new
+              </div>
+              <div class="catalog-slider-item__img">
+                <img src="img/router.png" alt="" />
+              </div>
+              <div class="catalog-slider-item__name">
+                IP телефон Siemens Gigaset C530A IP
+              </div>
+              <div class="catalog-slider-item__price">
+                Цена: <strong>12 300 р.</strong> <span>15 500 р.</span>
+              </div>
+              <div class="catalog-slider-item__btns">
+                <div class="catalog-slider-item__basket">
+                  <a href="#">
+                    <span><img src="img/cardwi.png" alt=""/></span> купить</a
+                  >
+                </div>
+                <div class="catalog-slider-item__next">
+                  <a href="#">Подробнее</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="catalog-slider-wrap">
+            <div class="catalog-slider-item">
+              <div class="catalog-slider-new">
+                new
+              </div>
+              <div class="catalog-slider-item__img">
+                <img src="img/router.png" alt="" />
+              </div>
+              <div class="catalog-slider-item__name">
+                IP телефон Siemens Gigaset C530A IP
+              </div>
+              <div class="catalog-slider-item__price">
+                Цена: <strong>12 300 р.</strong> <span>15 500 р.</span>
+              </div>
+              <div class="catalog-slider-item__btns">
+                <div class="catalog-slider-item__basket">
+                  <a href="#">
+                    <span><img src="img/cardwi.png" alt=""/></span> купить</a
+                  >
+                </div>
+                <div class="catalog-slider-item__next">
+                  <a href="#">Подробнее</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="advantages1">
+      <div class="container">
+        <div class="advantages">
+          <div class="advantages-left">
+            <div class="advantages-left__header">
+              <span><img src="img/X.png" alt=""/></span> С чем сталкиваются
+              клиенты в 85% случаев, когда <br />
+              обращаются к нашим конкурентам?
+            </div>
+            <ul class="advantages-left__list">
+              <li>
+                1.5 беглых менеджера по продажам со своим сайтом, имитирующие
+                торговую компанию.
+              </li>
+              <li>
+                Торговля серым, несертифицированным товаром, что выливается в
+                проблемы при гарантийном обслуживании.
+              </li>
+              <li>
+                Менеджеры по продажам знакомы с оборудованием лишь на бумаге,
+                часто не знают, что они продают.
+              </li>
+              <li>
+                Компании занимаются только продажей, не проводят установку и
+                настройку оборудования под ключ. Не оказывают техподдержку.
+              </li>
+              <li>
+                Сложная процедура гарантийного ремонта и возврата товара в
+                случае проблем. Не понятно, куда обращаться по гарантии.
+              </li>
+            </ul>
+          </div>
+          <div class="advantages-right">
+            <div class="advantages-right__header">
+              <span><img src="img/rigth.png" alt=""/></span> С чем сталкиваются
+              клиенты в 85% случаев, когда <br />
+              обращаются к нашим конкурентам?
+            </div>
+            <ul class="advantages-right__list">
+              <li>
+                1.5 беглых менеджера по продажам со своим сайтом, имитирующие
+                торговую компанию.
+              </li>
+              <li>
+                Торговля серым, несертифицированным товаром, что выливается в
+                проблемы при гарантийном обслуживании.
+              </li>
+              <li>
+                Менеджеры по продажам знакомы с оборудованием лишь на бумаге,
+                часто не знают, что они продают.
+              </li>
+              <li>
+                Компании занимаются только продажей, не проводят установку и
+                настройку оборудования под ключ. Не оказывают техподдержку.
+              </li>
+              <li>
+                Сложная процедура гарантийного ремонта и возврата товара в
+                случае проблем. Не понятно, куда обращаться по гарантии.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
