--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             >
               Привет, меня зовут Иннокентий Кондратьев и я <br />
 
-              <span>Верстаю сайты и лэндинги</span><br />
+              <span>Frontend-разработчик</span><br />
               создание современных и адаптивных веб-приложений
               <div class="wrapper">
                 <div class="inner">
