--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             <a href="#"><img src="img/inst.png" alt=""/></a>
           </div>
           <div class="footer-f">
-            <a href="https://tomsk.hh.ru/applicant/resumes/view?resume=5abfb976ff07a5017f0039ed1f57594b655361"><img src="img/headhunter-android.png_l"><img src="img/headhunter-android.png_l" alt=""/></a>
+            <a href="https://tomsk.hh.ru/applicant/resumes/view?resume=5abfb976ff07a5017f0039ed1f57594b655361"><img src="img/headhunter-android.png_l" alt=""/></a>
           </div>
           
         </div>
