--- a/zadan/index.html
+++ b/zadan/index.html
@@ -203,7 +203,11 @@
       <div class="modal-summCash">
         <form class="summCash-form">
           <input type="hidden" name="project_name" value="WeClean" />
-          <input type="hidden" name="admin_email" value="oim53683@zzrgg.com" />
+          <input
+            type="hidden"
+            name="admin_email"
+            value="kentovsky99@gmail.com"
+          />
           <input type="hidden" name="form_subject" value="form Subject" />
 
           <div class="summCash-form__title">Расчет стоимости</div>
