--- a/index.html
+++ b/index.html
@@ -186,7 +186,19 @@
                   Gulp, Анимация.
                 </div>
                 <div class="works-slider__img">
-                  <a href="#"><img src="img/sheregesh.png" alt=""/></a>
+                  <a href="https://defenderkent.github.io/sheregesh/"><img src="img/sheregesh.png" alt=""/></a>
+                </div>
+              </div>
+            </div>
+            <div class="works-slider-inner">
+              <div class="works-slider__items">
+                <div class="works-slider__title">moskvareklama.ru</div>
+                <div class="works-slider__subtitle">
+                  Сайт для рекламной студии. Использовались:HTML, SCSS,
+                  JS, Gulp, Анимация.
+                </div>
+                <div class="works-slider__img">
+                  <a href="https://moskvareklama.ru/"><img src="img/mos.png" alt=""/></a>
                 </div>
               </div>
             </div>
