--- a/customForm/index.html
+++ b/customForm/index.html
@@ -12,9 +12,10 @@
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
-    <div class="container"><div id="app"></div></div>
+    <div class="container">
+      <div id="app"></div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
