--- a/customForm/index.html
+++ b/customForm/index.html
@@ -14,8 +14,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="btn-start"><input type="button" id="rend" value="Render color scheme">
+      <div class="btn-start">
       <input type="button" id="rend2" value="Render Login">
+      <input type="button" id="rend" value="Render color scheme">
       <input type="button" id="rend3" value="Render register">
       <input type="button" id="rend4" value="Rend Inter">
       <input type="button" id="rend5" value="Rend AddPost"></div>
