--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                   <div class="title__text">НАПИСАТЬ МНЕ</div>
                   <div class="title__line"></div>
                   <div class="title__subtext">
-                     Пишите в любле время!!! <br>
+                     Пишите в любое время!!! <br>
                      Ниже есть форма отправки, но лучше писать в соц сети или звонок на телефон.
                   </div>
                </div>
