--- a/index.html
+++ b/index.html
@@ -347,6 +347,17 @@
                      </div>
                   </div>
                   <div class="mix works-slider-inner category-spa">
+                     <div class="works-slider__items">
+                        <div class="works-slider__title">Posts</div>
+                        <div class="works-slider__subtitle">
+                           SPA. Приложение которое принимает отрисовывает посты синхронно и асинхронно.React, redux, saga. 
+                        </div>
+                        <div class="works-slider__img">
+                           <a href="https://defenderkent.github.io/Posts/"> <img src="img/posts.png" alt=""/></a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="mix works-slider-inner category-spa">
                     <div class="works-slider__items">
                        <div class="works-slider__title">Список дел</div>
                        <div class="works-slider__subtitle">
