--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                  </div>
                  <div class="mix works-slider-inner category-spa">
                   <div class="works-slider__items">
-                     <div class="works-slider__title">Каталок сотрудников</div>
+                     <div class="works-slider__title">Каталог сотрудников</div>
                      <div class="works-slider__subtitle">
                         SPA для добавления сотрудников,можно добавлять и удалят сотрудников. Сделан на React Js, Redux, axios, json-server. 
                      </div>
